Preparing project for deployment

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -17,9 +17,9 @@ spring.application.name=ecommerce
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 ############# PostgresSQL DATABASE #############
-spring.datasource.url=jdbc:postgresql://localhost:5432/e-commerce
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -42,7 +42,8 @@ logging.level.com.ecommerce.project=DEBUG
 server.port=8080
 
 #FRONTEND URL
-frontend.url=http://localhost:5173
+frontend1.url=${FRONTEND_URL_1}
+frontend2.url=${FRONTEND_URL_2}
 image.base.url=http://localhost:8080/images
 
 #STRIPE KEY
